fixed copyright symbol

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
       </div><!-- /.container -->
     </section>
    <footer>
-      <p>Copyright @copy; 2016, Photo Gallery</p>
+       <p>Copyright &copy; 2016, Photo Gallery</p>
    </footer>
 
     <!-- Bootstrap core JavaScript
