Display images from database

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,2 +1,26 @@
-<h1>Categories#show</h1>
-<p>Find me in app/views/categories/show.html.erb</p>
+<div id="gallery"> 
+   <h2><%= @category.name %></h2>
+ <% if @images.exists? %>
+  <% @images.each_slice(4) do |image| %>
+   <div class="row">
+    <% image.each do |image| %>
+      <div class="col-md-3">
+	 <div class="photo photo-type-line">
+	    <a href="<% image.image_url() %>" class="photo-hover" data-lightbox="my-images" data-title="Lorem Ipsum">
+	       <div class="photo-info">
+		  <div class="headline"><%= image.image_title %></div>
+		  <div class="line"></div>
+		  <div class="desc"><%= image.image_description %></div>
+	       </div>
+	      <div class="mask"></div>
+	    </a>
+	    <div class="photo-img"><%= image_tag image.image_url(:thumb) %></div>
+	 </div>
+      </div><!-- /column -->
+  <% end %>
+   </div><!-- /row -->
+  <% end %>
+ <% else %>
+   <p>No images yet</p>
+  <% end %>
+</div><!-- /gallery -->
